--- a/index.html
+++ b/index.html
@@ -97,76 +97,61 @@
     <div id="fruitsAndVeggies" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Fruit & Veggies</h2>
-            peas, asparagus fiddleheads, dandelion greens, beet grens, lettuce, salad greens, radishes, kale,
-            blueberries, raspberries,
-            preserving/pickling?
-            corn, tomatoes,
-            cucumbers, summer squashes, beans,
-            winter squash, beets, onions,
-            apples and cider,
-            pumpkins, cornstalks, gourds
+            We are proud to provide, in-season, our own and locally grown: greens, scallions, radishes, asparagus, strawberries, blueberries, raspberries, cucumbers, tomatoes, corn, summer squashes, beans, lettuce, apples, pumpkins, gourds, cornstalks, and winter squash. We also offer produce that is not available locally to give you the best possible fresh selection.
         </div><div class="splitContent fruitsAndVeggies imgSplitContent"></div>
     </div>
     <div id="localWares" class="bigContent splitContentWrapper">
         <div class="splitContent localWares imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
-            <h2 class="title">Local Wares</h2>
-            Market. Local cheese, ice cream, soda, spices, eggs, meats, honey etc. crafts and trinkets (NH/VT) cider.. food products, gift baskets, snacks
+            <h2 class="title">Locally Produced</h2>
+            Our store is loaded with locally produced specialty foods including cheese, bacon, ice cream, soda, spice mixes, eggs, meats, honey, pesto, barbecue sauces, pickles and lots more. We also feature some crafts and souvenirs, and at the holidays prepare beautiful and “tasteful” gift baskets to please everyone on your list.
         </div>
     </div>
     <div id="bakedGoods" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Baked Goods</h2>
-            Pies, jam, snacks, goodies, ... famous homemade Thanksgiving pies.
+            We have delicious pies, jam, cookies, fudge, maple candies and other goodies, year ‘round! Our baked items sell out fast, so make sure to order in advance for your family reunions, weddings, birthday parties, or if you just find yourself craving something special! At Easter, Thanksgiving and Christmas time, we make pies ONLY TO ORDER. Contact us anytime for more info!
         </div><div class="splitContent pie imgSplitContent"></div>
     </div>
     <div id="meat" class="bigContent splitContentWrapper">
         <div class="splitContent meat imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Meat</h2>
-            Beef and lamb raised right on the farm. Pork, Chicken, Buffalo, Smoked Meats.
+            We raise pasture-raised beef and lamb right on the farm. We occasionally raise pigs and chickens, as well, so make sure to stop by and check out the freezers frequently. There is nothing like the taste of meats produced locally. We keep our prices competitive and the quality is outstanding.
         </div>
     </div>
     <div id="pickYourOwn" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Pick Your Own</h2>
-            Pick your own raspberries on an acre and a half of luscious easy to pick raspberries.
-            Free picking containers, water, and bathrooms.
-            Stop by the market for snacks or lunch and have a picnic while you pick.
-            Usually opens between July 4th and 10th and lasts through July.
-            Hours 8:00 AM to 6:00 PM - weather permitting - call for daily conditions.
-            We have pick your own blueberries too in a good year!
+            The pick-your-own raspberries patch usually opens between July 1st and 10th, and the season runs through July and into early August. We offer free picking containers (we charge by the pint, not the pound), water, and bathrooms. Hours are 8:00 AM to 6:00 PM - weather permitting - call for daily conditions. Pick your own blueberries open in late July!
         </div><div class="splitContent pickyourown imgSplitContent"></div>
     </div>
     <div id="hay" class="bigContent splitContentWrapper">
         <div class="splitContent hay imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Hay</h2>
-            Hay... available by order.
+            We produce close to a thousand bales of square bales of hay each year. We will deliver hay within 15 miles of the farm (additional fee), and usually have a few bales available at our store for your convenience. It is best to call and order hay before the season is over to guarantee availability.
         </div>
     </div>
     <div id="firewood" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Firewood</h2>
-            Firewood... available by order.
+            Dry firewood is available in the Fall by order, in quarter, half and full cords (deliveries, planned for September and October, are available for an additional fee). We usually have quarter cord amounts available at the store for pick up at your convenience, and small bundles for camping or home fire pits are available through the summer, fall and winter.
         </div><div class="splitContent firewood imgSplitContent"></div>
     </div>
     <div id="plow" class="bigContent splitContentWrapper">
         <div class="splitContent plowing imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
-            <h2 class="title">Plowing</h2>
-            Plowing...
+            <h2 class="title">Snowplowing & Sanding</h2>
+            We offer residential and small commercial snowplowing and sanding after every snowstorm in Newport, Claremont and Guild, and are fully insured. Please call for an estimate any time of year.
         </div>
     </div>
     <div id="trees" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
-                <h2 class="title">Christmas Trees and Balsam Wreathes</h2>
-                We make our own fresh-cut balsam wreaths.
-                Order early if you want them available at Thanksgiving.
-                We also grow our own Christmas trees and buy from two local NH and VT growers.
-                Only fresh-cut local will do!
+                <h2 class="title">Christmas Trees and Balsam Wreaths</h2>
+                Our own and locally grown (NH & VT) balsam, Fraser fir, and Korean fir trees are available the day after Thanksgiving until Christmas Eve. Your trees are always cut only a few days before you buy! We also make our own fresh-cut balsam wreaths in sizes from 10” diameter to 36”. Order early for wreath pick-up before or at Thanksgiving.
         </div><div class="splitContent trees imgSplitContent"></div>
     </div>
     <div id="syrup" class="bigContent splitContentWrapper">
         <div class="splitContent syrup imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Syrup</h2>
-            Home made syrup...
+            We make our own maple syrup with a wood-fired evaporator, tapping just over 4,000 taps in the late winter-early spring. We have syrup, maple candy, maple sugar and maple cream available for sale at our store year ‘round. Contact us for more info about buying syrup wholesale for your own outlet or to get a quote for personalized maple syrup favors for a wedding or party!
         </div>
     </div>
     <footer>
