Add text to about, update footers, make email/phone clickable.

--- a/about.html
+++ b/about.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="utf-8">
     <title>About Beaver Pond Farm</title>
-    <meta name="description" content="About Beaver Pond Farm in Newport, NH">
+    <meta name="description" content="Beaver Pond Farm in Newport, NH">
     <meta name="author" content="Andrew Boutin">
-    <meta name="keywords" content="about,beaver,pond,farm,newport,nh">
+    <meta name="keywords" content="beaver,pond,farm,newport,nh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="image_src" href="imgs/logo.jpg">
+    <link rel="image_src" href="imgs/logorec.png">
     <link rel="icon" href="imgs/favicon.ico">
-     <!-- Bootstrap related -->
+     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav id="navwrapper" class="navbar navbar-default navbar-fixed-top">
@@ -25,6 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="index.html" style="padding-top:2px;padding-bottom:2px;"><img src="imgs/logorectangle.png" style="height:100%;"></a>
                 <a class="navbar-brand" href="index.html">Beaver Pond Farm</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -37,23 +40,59 @@
         </div>
     </nav>
     <div class="bigContent">
-        <div class="logoWrapper">
-            <div class="logo titleLogo"></div>
-            <iframe class="fb" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeaverpondfarmnh&width=151&layout=button_count&action=like&size=large&show_faces=false&share=true&height=46&appId"></iframe>
-        </div>
-        ABOUT
-        <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
+            <h2 class="title">About</h2>
+Located on the John Stark Highway (1047 John Stark Highway) between Newport and Claremont New Hampshire, our retail store looks like a little red barn. We have a couple of goats and/or sheep at the store...our mini-petting zoo. We are five miles outside each town. The farm itself is about a quarter mile up McDonough Road (turn at the Rental Center), with our pick-your-own blueberries and raspberries at the farm location.
+<br><br>
+Becky (McDonough) Nelson is the eighth generation of the same family to own and work the land at Beaver Pond Farm. Her father, Fred, recently passed away, but her mother, Norma, is taunting the 90 age mark and is still making pies for the farm store! Becky's husband, Ben, runs the production end of the business. They met at the University of New Hampshire, and joined Becky's parents in partnership shortly after the marriage. Their daughter, Kathryn, works in education in southern NH while seeking her Master's degree, and their son, Samuel, has returned to work part-time at the farm (bringing fresh ideas and lots of energy!) while holding a full-time position at Sugar River Valley Regional Technical Center in Newport (Newport Middle&High School) as Forestry/Natural Resources Instructor. Both Kathryn and Samuel received their degrees at the University of New Hampshire. A long history keeps the family "rooted and growing" here in Sullivan County.
+In 1780, the Osgoods claimed the land where the farm is now operating and chopped it out of the woodlands that were described in town history as "infested with bears". We still see bears on occasion, and are proud to continue the farming tradition. "Nana", at age 89, is still baking up a storm (with help) with homemade pies and other goodies almost every day! We invite you to stop by for the freshest and best local products available in the region!
+<br><br>
+The farm was chopped out the forest in 1780 when the William Osgood family moved first to Claremont, NH from Massachusetts where they first emigrated from England. William Osgood purchased land in Newport shortly after the original settlers came to the area. The family expanded on the original 100 acres and now owns 265 acres that is mostly in forested or maple-orchard land, with about 20 acres in tillable land where vegetables, apples and berries are produced. We are very proud of our heritage as farmers on the very place our ancestors chose, and to be the seventh, eighth and ninth generations of family to now work the soil here.
+<br><br>
+<ol>
+<li>William Osgood & Hepsibah (Dutton) Osgood</li>
+<li>William Osgood & Priscilla (Stone) Osgood</li>
+<li>Lemuel Osgood & Hannah (Spaulding) Osgood</li>
+<li>Orren & Lucy Osgood (brother & sister, never married) & sister Hannah (Osgood) Johnson (married to Thomas Bixby Johnson, a shoemaker in Newport, NH)</li>
+<li>Edward Bixby Johnson  & Martinia (Glass) Johnson</li>
+<li>Lucy Osgood (Johnson) McDonough & Frederick Charles McDonough</li>
+<li>Frederick Charles McDonough, II & Norma (Grant) McDonough</li>
+<li>Rebecca ("Becky" McDonough) & Bennie Nelson</li>
+<li>Samuel Nelson</li>
+</ol>
     </div>
-    <div class="footer">
-            <div class="footerCell">
-                <div class="footerLogo logo"></div>
-            </div>
-            <div class="footerText footerCell">1047 John Stark Highway<br>
-                Newport, New Hampshire 03773<br>
-                (603) 543-1107<br>
-                beaverpondfarm1780@gmail.com
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <h3>Beaver Pond Farm</h3>
+                <div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <ul>
+                            <i>The freshest and the best since 1780</i>
+                        </ul>
+                        <ul class="social">
+                            <li><a href="https://www.facebook.com/beaverpondfarmnh"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.google.com/maps/place/Beaver+Pond+Farm+Stand/@43.367754,-72.2667508,17z/data=!4m7!3m6!1s0x0:0x216e134fbc8ae7d!8m2!3d43.367754!4d-72.2645621!9m1!1b1"><i class="fa fa-map-marker"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <ul>
+                            <li>1047 John Stark Highway</li>
+                            <li>Newport, New Hampshire 03773</li>
+                            <li><a href="tel:6035431107">(603) 543-1107</a></li>
+                            <li><a href="mailto:beaverpondfarm1780@gmail.com">beaverpondfarm1780@gmail.com</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
