--- a/contact.html
+++ b/contact.html
@@ -43,16 +43,40 @@
         </div>
         CONTACT
         <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
-    </div><div class="footer">
-            <div class="footerCell">
-                <div class="footerLogo logo"></div>
-            </div>
-            <div class="footerText footerCell">1047 John Stark Highway<br>
-                Newport, New Hampshire 03773<br>
-                (603) 543-1107<br>
-                beaverpondfarm1780@gmail.com
+    </div>
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <h3>Beaver Pond Farm</h3>
+                <div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <ul>
+                            <i>The freshest and the best since 1780</i>
+                        </ul>
+                        <ul class="social">
+                            <li><a href="https://www.facebook.com/beaverpondfarmnh"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.google.com/maps/place/Beaver+Pond+Farm+Stand/@43.367754,-72.2667508,17z/data=!4m7!3m6!1s0x0:0x216e134fbc8ae7d!8m2!3d43.367754!4d-72.2645621!9m1!1b1"><i class="fa fa-map-marker"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <ul>
+                            <li>1047 John Stark Highway</li>
+                            <li>Newport, New Hampshire 03773</li>
+                            <li><a href="tel:6035431107">(603) 543-1107</a></li>
+                            <li><a href="mailto:beaverpondfarm1780@gmail.com">beaverpondfarm1780@gmail.com</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
