--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                         <ul>
                             <li>1047 John Stark Highway</li>
                             <li>Newport, New Hampshire 03773</li>
-                            <li>(603) 543-1107</li>
-                            <li>beaverpondfarm1780@gmail.com</li>
+                            <li><a href="tel:6035431107">(603) 543-1107</a></li>
+                            <li><a href="mailto:beaverpondfarm1780@gmail.com">beaverpondfarm1780@gmail.com</a></li>
                         </ul>
                     </div>
                 </div>
