Fix up about & contact titles and meta info.

--- a/about.html
+++ b/about.html
@@ -40,7 +40,9 @@
         </div>
     </nav>
     <div class="bigContent">
-            <h2 class="title">About</h2>
+            <br>
+            <br>
+            <h2 class="title">About Us</h2>
 Located on the John Stark Highway (1047 John Stark Highway) between Newport and Claremont New Hampshire, our retail store looks like a little red barn. We have a couple of goats and/or sheep at the store...our mini-petting zoo. We are five miles outside each town. The farm itself is about a quarter mile up McDonough Road (turn at the Rental Center), with our pick-your-own blueberries and raspberries at the farm location.
 <br><br>
 Becky (McDonough) Nelson is the eighth generation of the same family to own and work the land at Beaver Pond Farm. Her father, Fred, recently passed away, but her mother, Norma, is taunting the 90 age mark and is still making pies for the farm store! Becky's husband, Ben, runs the production end of the business. They met at the University of New Hampshire, and joined Becky's parents in partnership shortly after the marriage. Their daughter, Kathryn, works in education in southern NH while seeking her Master's degree, and their son, Samuel, has returned to work part-time at the farm (bringing fresh ideas and lots of energy!) while holding a full-time position at Sugar River Valley Regional Technical Center in Newport (Newport Middle&High School) as Forestry/Natural Resources Instructor. Both Kathryn and Samuel received their degrees at the University of New Hampshire. A long history keeps the family "rooted and growing" here in Sullivan County.
