--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About Beaver Pond Farm</title>
-    <meta name="description" content="About Beaver Pond Farm in Newport, NH">
+    <title>Contact Beaver Pond Farm</title>
+    <meta name="description" content="Contact Beaver Pond Farm in Newport, NH">
     <meta name="author" content="Andrew Boutin">
-    <meta name="keywords" content="about,beaver,pond,farm,newport,nh">
+    <meta name="keywords" content="contact,beaver,pond,farm,newport,nh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="image_src" href="imgs/logo.jpg">
@@ -38,11 +38,13 @@
         </div>
     </nav>
     <div class="bigContent">
+        <br>
+        <br>
+        <h2 class="title">Contact Us</h2>
         <div class="logoWrapper">
             <div class="logo titleLogo"></div>
             <iframe class="fb" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeaverpondfarmnh&width=151&layout=button_count&action=like&size=large&show_faces=false&share=true&height=46&appId"></iframe>
         </div>
-        CONTACT
         <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
     </div>
     <footer>
