--- a/about.html
+++ b/about.html
@@ -27,12 +27,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index" style="padding-top:2px;padding-bottom:2px;"><img src="imgs/logorectangle.png" style="height:100%;"></a>
-                <a class="navbar-brand" href="index">Beaver Pond Farm</a>
+                <a class="navbar-brand" href="/" style="padding-top:2px;padding-bottom:2px;"><img src="imgs/logorectangle.png" style="height:100%;"></a>
+                <a class="navbar-brand" href="/">Beaver Pond Farm</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li class="active"><a href="about">About</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
@@ -78,7 +78,7 @@ The farm was chopped out the forest in 1780 when the William Osgood family moved
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                         <ul>
-                            <li><a href="index">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="about">About</a></li>
                             <li><a href="contact">Contact</a></li>
                         </ul>
