Move things around on contact page.

--- a/contact.html
+++ b/contact.html
@@ -40,12 +40,14 @@
     <div class="bigContent">
         <br>
         <br>
-        <h2 class="title">Contact Us</h2>
-        <div class="logoWrapper">
-            <div class="logo titleLogo"></div>
+        <h2>Contact Us</h2>
+        <div class="logo titleLogo"></div>
+        <div class="fbwrapper">
             <iframe class="fb" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeaverpondfarmnh&width=151&layout=button_count&action=like&size=large&show_faces=false&share=true&height=46&appId"></iframe>
         </div>
-        <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
+        <div>
+            <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
+        </div>
     </div>
     <footer>
         <div class="footer">
